--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -254,6 +254,12 @@ body {
     box-shadow: 0 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
 
+
+.post_container{
+    padding: 0%;
+    display: flex;
+}
+
 .post__image img {
     width: 100%;
 }
